--- a/styles/main.css
+++ b/styles/main.css
@@ -2,9 +2,143 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
   width: 100vw;
   height: 100vh;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 32px;
+
+  background: linear-gradient(340.73deg, #58BEF6 5.03%, #39E394 96.89%);
+}
+
+.calculator__container {
+  width: 600px;
+
+  display: flex;
+  flex-direction: column;
+
+  background: linear-gradient(168.16deg, #424242 0%, rgba(66, 66, 66, 0.4) 99.69%);
+  border: 1px solid #424242;
+  box-sizing: border-box;
+  box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(50px);
+
+  border-radius: 18px;
+}
+
+.calculator__container .calculator__screen {
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+
+  color: #FFFFFF;
+
+  padding: 2rem 1rem;
+}
+
+.calculator__container .calculator__screen .calculator__screen-equation {
+  width: 100%;
+
+  text-align: end;
+
+  font-size: 36px;
+}
+
+.calculator__container .calculator__screen .calculator__screen-result {
+  width: 100%;
+
+  text-align: end;
+
+  font-size: 106px;
+  font-weight: 700;
+}
+
+.calculator__container .calculator__keyboard {
+  width: 100%;
+
+  display: grid;
+
+  grid-template-areas:  "clear-entry  clear-all division  multiply"
+                        "seven        eight     nine      decrease"
+                        "four         five      six       add"
+                        "one          two       three     equal"
+                        "zero         zero      dot       equal";
+
+  row-gap: 1rem;
+  column-gap: 1rem;
+
+  padding: 1rem;
+}
+
+.calculator__container .calculator__keyboard button {
+  background: #4E4E4E;
+  color: #FFFFFF;
+  padding: 1rem;
+
+  border: none;
+  border-radius: 1rem;
+
+  font-size: 2.25rem;
+
+  transition: all 0.2s ease-in-out;
+}
+
+.calculator__container .calculator__keyboard button:hover {
+  opacity: 0.8;
+}
+
+.calculator__container .calculator__keyboard .button__clear-entry { grid-area: clear-entry; }
+.calculator__container .calculator__keyboard .button__clear-all { grid-area: clear-all; }
+.calculator__container .calculator__keyboard .button__division { grid-area: division; }
+.calculator__container .calculator__keyboard .button__multiply { grid-area: multiply; }
+.calculator__container .calculator__keyboard .button__seven { grid-area: seven; }
+.calculator__container .calculator__keyboard .button__eight { grid-area: eight; }
+.calculator__container .calculator__keyboard .button__nine { grid-area: nine; }
+.calculator__container .calculator__keyboard .button__decrease { grid-area: decrease; }
+.calculator__container .calculator__keyboard .button__four { grid-area: four; }
+.calculator__container .calculator__keyboard .button__five { grid-area: five; }
+.calculator__container .calculator__keyboard .button__six { grid-area: six; }
+.calculator__container .calculator__keyboard .button__add { grid-area: add; }
+.calculator__container .calculator__keyboard .button__one { grid-area: one; }
+.calculator__container .calculator__keyboard .button__two { grid-area: two; }
+.calculator__container .calculator__keyboard .button__three { grid-area: three; }
+.calculator__container .calculator__keyboard .button__equal { grid-area: equal; background: #56CB95; }
+.calculator__container .calculator__keyboard .button__zero { grid-area: zero; }
+.calculator__container .calculator__keyboard .button__dot { grid-area: dot; }
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+}
+
+footer a  {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+
+  font-size: 24px;
+  font-weight: 700;
+
+  color: rgba(66, 66, 66, 0.4);
+
+  text-decoration: none;
+
+  transition: all 0.2s ease-in-out;
+}
+
+footer a:hover  {
+  color: #424242;
 }
