--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@
   --color-primary: #39E394;
   --color-secondary: #58BEF6;
   --color-text: #FFFFFF;
-  --color-button: #4E4E4E;
+  --color-button: #4e4e4e;
 
-  --color-background-body: linear-gradient(340.73deg, #58BEF6 5.03%, #39E394 96.89%);
+  --color-background-body: linear-gradient(340.73deg, var(--color-secondary) 5.03%, var(--color-primary) 96.89%);
   --color-background-calculator: linear-gradient(168.16deg, #424242 0%, rgba(66, 66, 66, 0.4) 99.69%);
   --box-shadow-background-calculator: 7px 7px 20px rgba(0, 0, 0, 0.25);
 }
@@ -29,7 +29,7 @@ body {
 
   padding: 2rem;
 
-  background: linear-gradient(340.73deg, #58BEF6 5.03%, #39E394 96.89%);
+  background: var(--color-background-body);
 }
 
 .calculator__container {
@@ -39,7 +39,7 @@ body {
   display: flex;
   flex-direction: column;
 
-  background: linear-gradient(168.16deg, #424242 0%, rgba(66, 66, 66, 0.4) 99.69%);
+  background: var(--color-background-calculator);
 
   box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(50px);
@@ -65,7 +65,7 @@ body {
   font-size: 24px;
   font-weight: 700;
 
-  color: #39E394;
+  color: var(--color-primary);
 
   text-decoration: none;
 
@@ -83,7 +83,7 @@ body {
   flex-direction: column;
   gap: 0.5rem;
 
-  color: #FFFFFF;
+  color: var(--color-text);
 
   padding: 2rem 1rem;
 }
@@ -124,8 +124,8 @@ body {
 }
 
 .calculator__keyboard button {
-  background: #4E4E4E;
-  color: #FFFFFF;
+  background: var(--color-button);
+  color: var(--color-text);
   padding: 1.5rem 1rem;
 
   border: none;
@@ -155,7 +155,7 @@ body {
 .calculator__keyboard .button__one { grid-area: one; }
 .calculator__keyboard .button__two { grid-area: two; }
 .calculator__keyboard .button__three { grid-area: three; }
-.calculator__keyboard .button__equal { grid-area: equal; background: #56CB95; height: 100%; }
+.calculator__keyboard .button__equal { grid-area: equal; background: var(--color-primary); height: 100%; }
 .calculator__keyboard .button__zero { grid-area: zero; width: 100%; }
 .calculator__keyboard .button__dot { grid-area: dot; }
 
